@@ -35,7 +35,6 @@ import org.openremote.manager.rules.RulesetStorageService;
 import org.openremote.manager.security.ManagerIdentityService;
 import org.openremote.manager.security.ManagerKeycloakIdentityProvider;
 import org.openremote.manager.web.ManagerWebService;
-import org.openremote.model.Constants;
 import org.openremote.model.Container;
 import org.openremote.model.ContainerService;
 import org.openremote.model.PersistenceEvent;
@@ -49,13 +48,13 @@ import org.openremote.model.gateway.GatewayDisconnectEvent;
 import org.openremote.model.gateway.GatewayTunnelInfo;
 import org.openremote.model.query.AssetQuery;
 import org.openremote.model.rules.Ruleset;
-import org.openremote.model.security.ClientRole;
 import org.openremote.model.security.Realm;
 import org.openremote.model.security.User;
 import org.openremote.model.syslog.SyslogCategory;
 import org.openremote.model.util.TextUtil;
 import org.openremote.model.value.MetaItemType;
 
+import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicBoolean;
@@ -94,6 +93,7 @@ public class GatewayService extends RouteBuilder implements ContainerService {
     public static final String OR_GATEWAY_TUNNEL_SSH_PORT = "OR_GATEWAY_TUNNEL_SSH_PORT";
     public static final String OR_GATEWAY_TUNNEL_TCP_START = "OR_GATEWAY_TUNNEL_TCP_START";
     public static final String OR_GATEWAY_TUNNEL_HOSTNAME = "OR_GATEWAY_TUNNEL_HOSTNAME";
+    public static final String OR_GATEWAY_TUNNEL_AUTO_CLOSE_MINUTES = "OR_GATEWAY_TUNNEL_AUTO_CLOSE_MINUTES";
     public static final int OR_GATEWAY_TUNNEL_TCP_START_DEFAULT = 9000;
     protected AssetStorageService assetStorageService;
     protected AssetProcessingService assetProcessingService;
@@ -109,6 +109,7 @@ public class GatewayService extends RouteBuilder implements ContainerService {
     protected String tunnelHostname;
     protected int tunnelSSHPort;
     protected int tunnelTCPStart;
+    protected int tunnelAutoCloseMinutes;
 
     /**
      * Maps gateway asset IDs to connections; note that gateway asset IDs are stored lower case so that they can be
@@ -198,20 +199,7 @@ public class GatewayService extends RouteBuilder implements ContainerService {
             active = true;
             identityProvider = (ManagerKeycloakIdentityProvider) identityService.getIdentityProvider();
             container.getService(MessageBrokerService.class).getContext().addRoutes(this);
-            clientEventService.setWebsocketInterceptor(this::onMessageIntercept);
-
-            // Gateways can send AssetsEvents into this central manager so we need to authorize those
-            clientEventService.addEventAuthorizer((requestRealm, authContext, event) -> {
-
-                if (authContext == null) {
-                    return false;
-                }
-
-                String clientId = authContext.getClientId();
-
-                // TODO: Introduce gateway realm role
-                return isGatewayClientId(clientId);
-            });
+            clientEventService.setGatewayInterceptor(this::onGatewayMessageIntercept);
 
             assetProcessingService.addEventInterceptor(new AttributeEventInterceptor() {
                 @Override
@@ -232,6 +220,7 @@ public class GatewayService extends RouteBuilder implements ContainerService {
         tunnelSSHPort = getInteger(container.getConfig(), OR_GATEWAY_TUNNEL_SSH_PORT, 0);
         tunnelTCPStart = getInteger(container.getConfig(), OR_GATEWAY_TUNNEL_TCP_START, OR_GATEWAY_TUNNEL_TCP_START_DEFAULT);
         tunnelHostname = getString(container.getConfig(), OR_GATEWAY_TUNNEL_HOSTNAME, null);
+        tunnelAutoCloseMinutes = getInteger(container.getConfig(), OR_GATEWAY_TUNNEL_AUTO_CLOSE_MINUTES, 0);
     }
 
     @Override
@@ -249,7 +238,7 @@ public class GatewayService extends RouteBuilder implements ContainerService {
         gateways = gateways.stream()
             .filter(gateway ->
                 Arrays.stream(gateway.getPath()).noneMatch(p -> !p.equals(gateway.getId()) && gatewayIds.contains(p)))
-            .collect(Collectors.toList());
+            .toList();
 
         if (!gateways.isEmpty()) {
             LOG.info("Directly registered gateways found = " + gateways.size());
@@ -265,7 +254,7 @@ public class GatewayService extends RouteBuilder implements ContainerService {
                 }
 
                 // Create connector
-                GatewayConnector connector = new GatewayConnector(assetStorageService, assetProcessingService, executorService, scheduledExecutorService, this, gateway);
+                GatewayConnector connector = new GatewayConnector(assetStorageService, assetProcessingService, executorService, scheduledExecutorService, this, timerService, gateway);
                 gatewayConnectorMap.put(gateway.getId().toLowerCase(Locale.ROOT), connector);
 
                 // Get IDs of all assets under this gateway
@@ -283,7 +272,7 @@ public class GatewayService extends RouteBuilder implements ContainerService {
 
     @Override
     public void stop(Container container) throws Exception {
-        gatewayConnectorMap.values().forEach(GatewayConnector::disconnect);
+        gatewayConnectorMap.values().forEach(connector -> connector.disconnect(GatewayDisconnectEvent.Reason.TERMINATING));
         gatewayConnectorMap.clear();
         assetIdGatewayIdMap.clear();
         tunnelInfos.clear();
@@ -337,7 +326,11 @@ public class GatewayService extends RouteBuilder implements ContainerService {
         }
     }
 
-    protected void onMessageIntercept(Exchange exchange) {
+    /**
+     * This method by-passes the standard client event authorization so all consumers within the GatewayConnector
+     * must handle authorization and/or ensure operations can only be conducted on gateway descendants.
+     */
+    protected void onGatewayMessageIntercept(Exchange exchange) {
         String clientId = ClientEventService.getClientId(exchange);
 
         if (!isGatewayClientId(clientId)) {
@@ -420,7 +413,7 @@ public class GatewayService extends RouteBuilder implements ContainerService {
                 newSecret = identityProvider.resetSecret(event.getRealm(), gatewayServiceUser.getId(), newSecret);
 
                 // Disconnect current session
-                connector.disconnect();
+                connector.disconnect(GatewayDisconnectEvent.Reason.TERMINATING);
 
                 // Update the event value with the potentially newly generated secret
                 event.setValue(newSecret);
@@ -538,11 +531,20 @@ public class GatewayService extends RouteBuilder implements ContainerService {
         if (!TextUtil.isNullOrEmpty(tunnelHostname)) {
             tunnelInfo.setHostname(tunnelHostname);
         }
+        if (tunnelAutoCloseMinutes > 0) {
+            tunnelInfo.setAutoCloseTime(timerService.getNow().plus(Duration.ofMinutes(tunnelAutoCloseMinutes)));
+        }
+
         CompletableFuture<Void> startFuture = connector.startTunnel(tunnelInfo);
         try {
             pendingTunnelCounter.incrementAndGet();
             startFuture.get();
             tunnelInfos.put(tunnelInfo.getId(), tunnelInfo);
+            if (tunnelInfo.getAutoCloseTime() != null) {
+                Duration delay = Duration.between(timerService.getNow(), tunnelInfo.getAutoCloseTime());
+                scheduledExecutorService.schedule(() -> autoCloseTunnel(tunnelInfo.getId()), delay.toMillis(), TimeUnit.MILLISECONDS);
+                LOG.fine("Scheduled job to automatically close tunnel '" + tunnelInfo.getId() + "' at " + tunnelInfo.getAutoCloseTime());
+            }
             return tunnelInfo;
         } catch (ExecutionException e) {
             if (e.getCause() instanceof TimeoutException) {
@@ -600,11 +602,11 @@ public class GatewayService extends RouteBuilder implements ContainerService {
         try {
             stopFuture.get(20, TimeUnit.SECONDS);
         } catch (ExecutionException e) {
-            String msg = "Failed to start tunnel: An error occurred whilst waiting for the tunnel to be started: id=" + gatewayId;
+            String msg = "Failed to stop tunnel: An error occurred whilst waiting for the tunnel to be stopped: id=" + gatewayId;
             LOG.log(Level.WARNING, msg, e.getCause());
             throw new RuntimeException(msg, e.getCause());
         } catch (InterruptedException | TimeoutException e) {
-            String msg = "Failed to start tunnel: An error occurred whilst waiting for the tunnel to be started: id=" + gatewayId;
+            String msg = "Failed to stop tunnel: An error occurred whilst waiting for the tunnel to be stopped: id=" + gatewayId;
             LOG.warning(msg);
             throw new RuntimeException(msg);
         } finally {
@@ -654,15 +656,16 @@ public class GatewayService extends RouteBuilder implements ContainerService {
         }
 
         if (connector.isDisabled()) {
-            LOG.warning("Gateway is currently disabled so will be ignored: " + this);
+            LOG.warning("Gateway is currently disabled so will be ignored: GatewayID=" + gatewayId);
             clientEventService.sendToWebsocketSession(sessionId, new GatewayDisconnectEvent(GatewayDisconnectEvent.Reason.DISABLED));
             clientEventService.closeWebsocketSession(sessionId);
             return;
         }
 
         connector.connected(sessionId, createConnectorMessageConsumer(sessionId), () -> {
-            clientEventService.closeWebsocketSession(sessionId);
-            tunnelInfos.values().removeIf(tunnelInfo -> tunnelInfo.getGatewayId().equals(gatewayId));
+            try {
+                clientEventService.closeWebsocketSession(sessionId);
+            } catch (Exception ignored) {}
         });
     }
 
@@ -670,8 +673,13 @@ public class GatewayService extends RouteBuilder implements ContainerService {
         String gatewayId = getGatewayIdFromClientId(gatewayClientId);
         GatewayConnector connector = gatewayConnectorMap.get(gatewayId.toLowerCase(Locale.ROOT));
 
-        if (connector != null) {
-            connector.disconnected(sessionId);
+        try {
+            if (connector != null) {
+                connector.disconnected(sessionId);
+            }
+        } finally {
+            // Assume all gateway tunnels have been terminated
+            tunnelInfos.values().removeIf(tunnelInfo -> tunnelInfo.getGatewayId().equalsIgnoreCase(gatewayId));
         }
     }
 
@@ -693,7 +701,7 @@ public class GatewayService extends RouteBuilder implements ContainerService {
 
             case CREATE -> {
                 createUpdateGatewayServiceUser(gateway);
-                GatewayConnector connector = new GatewayConnector(assetStorageService, assetProcessingService, executorService, scheduledExecutorService, this, gateway);
+                GatewayConnector connector = new GatewayConnector(assetStorageService, assetProcessingService, executorService, scheduledExecutorService, this, timerService, gateway);
                 gatewayConnectorMap.put(gateway.getId().toLowerCase(Locale.ROOT), connector);
             }
             case UPDATE -> {
@@ -705,9 +713,6 @@ public class GatewayService extends RouteBuilder implements ContainerService {
 
                 // Check if disabled
                 boolean isNowDisabled = gateway.getDisabled().orElse(false);
-                if (isNowDisabled) {
-                    connector.sendMessageToGateway(new GatewayDisconnectEvent(GatewayDisconnectEvent.Reason.DISABLED));
-                }
                 connector.setDisabled(isNowDisabled);
 
                 if (persistenceEvent.hasPropertyChanged("attributes")) {
@@ -740,7 +745,7 @@ public class GatewayService extends RouteBuilder implements ContainerService {
                 connector = gatewayConnectorMap.remove(gateway.getId().toLowerCase(Locale.ROOT));
 
                 if (connector != null) {
-                    connector.disconnect();
+                    connector.disconnect(GatewayDisconnectEvent.Reason.UNRECOGNISED);
                 }
 
                 removeGatewayServiceUser(gateway);
@@ -792,9 +797,11 @@ public class GatewayService extends RouteBuilder implements ContainerService {
         try {
             User gatewayUser = identityProvider.getUserByUsername(gateway.getRealm(), User.SERVICE_ACCOUNT_PREFIX + clientId);
             boolean userExists = gatewayUser != null;
+            boolean createUpdateGatewayUser = gatewayUser == null
+                || gatewayUser.getEnabled() == gateway.getDisabled().orElse(false)
+                || Objects.equals(gatewayUser.getSecret(), gateway.getClientSecret().orElse(null));
 
-            if (gatewayUser == null || gatewayUser.getEnabled() == gateway.getDisabled().orElse(false) || Objects.equals(gatewayUser.getSecret(), gateway.getClientSecret().orElse(null))) {
-
+            if (createUpdateGatewayUser) {
                 gatewayUser = identityProvider.createUpdateUser(gateway.getRealm(), new User()
                     .setServiceAccount(true)
                     .setSystemAccount(true)
@@ -803,8 +810,13 @@ public class GatewayService extends RouteBuilder implements ContainerService {
             }
 
             if (!userExists && gatewayUser != null) {
-                // Configure roles for this gateway user
-                identityProvider.updateUserRoles(gateway.getRealm(), gatewayUser.getId(), Constants.KEYCLOAK_CLIENT_ID, ClientRole.WRITE.getValue());
+                // Make the user restricted with no permissions
+                // Gateway events are handled directly by the GatewayConnector
+                identityProvider.updateUserRealmRoles(
+                        gateway.getRealm(),
+                        gatewayUser.getId(),
+                        identityProvider
+                            .addUserRealmRoles(gateway.getRealm(), gatewayUser.getId(), RESTRICTED_USER_REALM_ROLE));
             }
 
             if (!clientId.equals(gateway.getClientId().orElse(null)) || !secret.equals(gateway.getClientSecret().orElse(null))) {
@@ -819,7 +831,7 @@ public class GatewayService extends RouteBuilder implements ContainerService {
                 LOG.log(Level.SEVERE, "Failed to merge registered gateway: " + gateway.getId(), e);
             }
         } catch (Exception e) {
-            LOG.warning("Failed to create client for gateway '" + gateway.getId());
+            LOG.warning("Failed to create client for gateway: " + gateway.getId());
         }
     }
 
@@ -846,6 +858,21 @@ public class GatewayService extends RouteBuilder implements ContainerService {
 
     public int getTunnelTCPStart() {
         return tunnelTCPStart;
+    }
+
+    protected void autoCloseTunnel(String tunnelId) {
+        GatewayTunnelInfo tunnelInfo = tunnelInfos.get(tunnelId);
+        if (tunnelInfo == null) {
+            LOG.fine("Tunnel '" + tunnelId + "' not found so it cannot be automatically closed");
+            return;
+        }
+
+        try {
+            LOG.info("Automatically closing tunnel: " + tunnelId);
+            stopTunnel(tunnelInfo);
+        } catch (IllegalArgumentException | IllegalStateException e) {
+            LOG.log(Level.WARNING, "Failed to automatically close tunnel: " + tunnelId, e);
+        }
     }
 
     @Override
